syntax = "proto3";

option go_package = "github.com/elap5e/penguin/daemon/auth/pb";

// ThirdPartLogin is the message type for the ThirdPartLogin.
message ThirdPartLogin {
  // Message generated by proto-message-gen. DO NOT EDIT.
  // source: oicq.wlogin_sdk.p1290pb.ThirdPartLogin$ReqBody
  //
  // ReqBody is the message type for the ThirdPartLogin$ReqBody.
  message ReqBody {
    ReqCommonInfo msg_req_common_info          = 9; // msg_req_common_info
    ReqClientInfo msg_req_client_info          = 5; // msg_req_client_info
    ReqBodyThirdLogin msg_req_third_login      = 10; // msg_req_third_login
    ReqBodySelfPhone msg_req_self_phone        = 20; // msg_req_self_phone
    ReqConnectLogin msg_req_connect_login      = 30; // msg_req_connect_login
    ReqBindPhoneLogin msg_req_bind_phone_login = 40; // msg_req_bind_phone_login
    ReqMaskQQLogin msg_req_mask_qq_login       = 50; // msg_req_mask_qq_login
    ReqCmd9 msg_req_cmd_9                      = 60; // msg_req_cmd_9
    ReqCmd17 msg_req_cmd_17                    = 70; // msg_req_cmd_17
    ReqCmd18 msg_req_cmd_18                    = 71; // msg_req_cmd_18
    ReqCmd23 msg_req_cmd_23                    = 76; // msg_req_cmd_23
    // ReqCommonInfo is the message type for the ThirdPartLogin$ReqCommonInfo.
    message ReqCommonInfo {
      uint32 req_need_verify_scenes = 10; // uint32_req_need_verify_scenes
    }
    // ReqClientInfo is the message type for the ThirdPartLogin$ReqClientInfo.
    message ReqClientInfo {
      string client_qua      = 1; // str_client_qua
      uint32 client_platform = 2; // uint32_client_platform
    }
    // ReqBodyThirdLogin is the message type for the ThirdPartLogin$ReqBodyThirdLogin.
    message ReqBodyThirdLogin {
      uint32 service_type              = 10; // uint32_service_type
      uint32 uin_account_type          = 11; // uin_account_type
      ReqBodyGoogle msg_req_google     = 20; // msg_req_google
      ReqBodyFaceBook msg_req_facebook = 21; // msg_req_facebook
      ReqPhoneLogin msg_req_phone      = 22; // msg_req_phone
      ReqBodyApple msg_req_apple       = 23; // msg_req_apple
      // ReqBodyGoogle is the message type for the ThirdPartLogin$ReqBodyGoogle.
      message ReqBodyGoogle {
        string appid    = 11; // str_appid
        string id_token = 12; // str_id_token
      }
      // ReqBodyFaceBook is the message type for the ThirdPartLogin$ReqBodyFaceBook.
      message ReqBodyFaceBook {
        string appid        = 11; // str_appid
        string access_token = 12; // str_access_token
      }
      // ReqPhoneLogin is the message type for the ThirdPartLogin$ReqPhoneLogin.
      message ReqPhoneLogin {
        string country_code = 11; // str_country_code
        string phone_num    = 12; // str_phone_num
      }
      // ReqBodyApple is the message type for the ThirdPartLogin$ReqBodyApple.
      message ReqBodyApple {
        string appid              = 11; // str_appid
        string user_id            = 12; // str_user_id
        string identity_token     = 13; // str_identity_token
        string authorization_code = 14; // str_authorization_code
        string nick_name          = 30; // str_nick_name
        string gender             = 31; // str_gender
      }
    }
    // ReqBodySelfPhone is the message type for the ThirdPartLogin$ReqBodySelfPhone.
    message ReqBodySelfPhone {
      ReqBodySelfPhoneCheck msg_req_check_phone      = 10; // msg_req_check_phone
      ReqBodySelfPhoneGetUrl msg_req_get_url         = 11; // msg_req_get_url
      ReqBodySelfPhoneCheckV4 msg_req_check_phone_v4 = 12; // msg_req_check_phone_v4
      ReqBodySelfPhoneGetUrlV4 msg_req_get_url_v4    = 13; // msg_req_get_url_v4
      ReqBodySelfPhoneLogin msg_req_phone_login      = 14; // msg_req_phone_login
      // ReqBodySelfPhoneCheck is the message type for the ThirdPartLogin$ReqBodySelfPhoneCheck.
      message ReqBodySelfPhoneCheck {
        string upurl     = 10; // str_upurl
        string token     = 11; // str_token
        string msg_id    = 12; // str_msg_id
        int32 channel_id = 13; // int32_channel_id
        string cell_ip   = 14; // str_cell_ip
      }
      // ReqBodySelfPhoneGetUrl is the message type for the ThirdPartLogin$ReqBodySelfPhoneGetUrl.
      message ReqBodySelfPhoneGetUrl {
        uint32 get_upload_url = 10; // uint32_get_upload_url
        string mobile_phone   = 11; // str_mobile_phone
        string cell_ip        = 12; // str_cell_ip
        uint32 isp_type       = 13; // uint32_isp_type
      }
      // ReqBodySelfPhoneCheckV4 is the message type for the ThirdPartLogin$ReqBodySelfPhoneCheckV4.
      message ReqBodySelfPhoneCheckV4 {
        string msg_id                            = 10; // str_msg_id
        string cell_ip                           = 11; // str_cell_ip
        repeated SelfPhoneToken self_phone_token = 12; // rpt_self_phone_token
      }
      // ReqBodySelfPhoneGetUrlV4 is the message type for the ThirdPartLogin$ReqBodySelfPhoneGetUrlV4.
      message ReqBodySelfPhoneGetUrlV4 {
        uint32 get_upload_url = 10; // uint32_get_upload_url
        string mobile_phone   = 11; // str_mobile_phone
        string cell_ip        = 12; // str_cell_ip
        uint32 isp_type       = 13; // uint32_isp_type
      }
      // ReqBodySelfPhoneLogin is the message type for the ThirdPartLogin$ReqBodySelfPhoneLogin.
      message ReqBodySelfPhoneLogin {
        bytes phone_token          = 10; // bytes_phone_token
        bool support_auxinfo_check = 11; // bool_support_auxinfo_check
      }
    }
    // ReqConnectLogin is the message type for the ThirdPartLogin$ReqConnectLogin.
    message ReqConnectLogin {
      string connect_data = 1; // str_connect_data
    }
    // ReqBindPhoneLogin is the message type for the ThirdPartLogin$ReqBindPhoneLogin.
    message ReqBindPhoneLogin {
      PicVerifyInfo msg_pic_verify_info = 10; // msg_pic_verify_info
      // PicVerifyInfo is the message type for the ThirdPartLogin$PicVerifyInfo.
      message PicVerifyInfo {
        uint64 appid     = 1; // uint64_appid
        bytes verify_sig = 2; // bytes_verify_sig
        bytes rand_key   = 3; // bytes_rand_key
      }
    }
    // ReqMaskQQLogin is the message type for the ThirdPartLogin$ReqMaskQQLogin.
    message ReqMaskQQLogin {
      bytes encrypt_uin_info = 1; // bytes_encrypt_uin_info
    }
    // ReqCmd9 is the message type for the ThirdPartLogin$ReqCmd9.
    message ReqCmd9 {}
    // ReqCmd17 is the message type for the ThirdPartLogin$ReqCmd17.
    message ReqCmd17 {
      uint32 country_code                                   = 1; // uint32_country_code
      string mobile_phone                                   = 2; // str_mobile_phone
      ReqPhoneSmsExtendLogin msg_req_phone_sms_extend_login = 10; // msg_req_phone_sms_extend_login
      // ReqPhoneSmsExtendLogin is the message type for the ThirdPartLogin$ReqPhoneSmsExtendLogin.
      message ReqPhoneSmsExtendLogin {
        uint32 support_flag = 1; // uint32_support_flag
      }
    }
    // ReqCmd18 is the message type for the ThirdPartLogin$ReqCmd18.
    message ReqCmd18 {}
    // ReqCmd23 is the message type for the ThirdPartLogin$ReqCmd23.
    message ReqCmd23 {
      ReqTimWeChat msg_req_tim_wechat = 10; // msg_req_tim_wechat
      // ReqTimWeChat is the message type for the ThirdPartLogin$ReqTimWeChat.
      message ReqTimWeChat {
        uint32 support_mobile_register = 10; // uint32_support_mobile_register
      }
    }
  }
  // Message generated by proto-message-gen. DO NOT EDIT.
  // source: oicq.wlogin_sdk.p1290pb.ThirdPartLogin$RspBody
  //
  // RspBody is the message type for the ThirdPartLogin$RspBody.
  message RspBody {
    RspCommonInfo msg_rsp_common_info          = 9; // msg_rsp_common_info
    RspBodyThirdLogin msg_rsp_third_login      = 10; // msg_rsp_third_login
    RspBodySelfPhone msg_rsp_self_phone        = 20; // msg_rsp_self_phone
    RspConnectLogin msg_rsp_connect_login      = 30; // msg_rsp_connect_login
    RspBindPhoneLogin msg_rsp_bind_phone_login = 40; // msg_rsp_bind_phone_login
    RspLftInfo msg_rsp_lft_info                = 50; // msg_rsp_lft_info
    RspTipsInfo msg_rsp_tips_info              = 60; // msg_rsp_tips_info
    RspCmd9 msg_rsp_cmd_9                      = 70; // msg_rsp_cmd_9
    RspCmd17 msg_rsp_cmd_17                    = 80; // msg_rsp_cmd_17
    RspCmd18 msg_rsp_cmd_18                    = 81; // msg_rsp_cmd_18
    RspCmd23 msg_rsp_cmd_23                    = 86; // msg_rsp_cmd_23
    // RspBodySelfPhone is the message type for the ThirdPartLogin$RspBodySelfPhone.
    message RspBodySelfPhone {
      RspBodySelfPhoneCheck msg_rsp_check_phone   = 10; // msg_rsp_check_phone
      RspBodySelfPhoneGetUrl msg_rsp_get_url      = 11; // msg_rsp_get_url
      RspBodySelfPhoneGetUrlV4 msg_rsp_get_url_v4 = 12; // msg_rsp_get_url_v4
      RspBodySelfPhoneLogin msg_rsp_phone_login   = 13; // msg_rsp_phone_login
      // RspBodySelfPhoneCheck is the message type for the ThirdPartLogin$RspBodySelfPhoneCheck.
      message RspBodySelfPhoneCheck {
        string upload_redirect_url = 10; // str_upload_redirect_url
        string msg_id              = 11; // str_msg_id
        int32 channel_id           = 12; // int32_channel_id
        int32 channel_carrier_type = 13; // int32_channel_carrier_type
      }
      // RspBodySelfPhoneGetUrl is the message type for the ThirdPartLogin$RspBodySelfPhoneGetUrl.
      message RspBodySelfPhoneGetUrl {
        string upload_url = 10; // str_upload_url
        string msg_id     = 11; // str_msg_id
        int32 channel_id  = 12; // int32_channel_id
      }
      // RspBodySelfPhoneGetUrlV4 is the message type for the ThirdPartLogin$RspBodySelfPhoneGetUrlV4.
      message RspBodySelfPhoneGetUrlV4 {
        string msg_id                        = 10; // str_msg_id
        repeated SelfPhoneUrl self_phone_url = 11; // rpt_self_phone_url
      }
      // RspBodySelfPhoneLogin is the message type for the ThirdPartLogin$RspBodySelfPhoneLogin.
      message RspBodySelfPhoneLogin {
        repeated UinInfo bind_uin_info = 10; // rpt_bind_uin_info
        int32 phone_bind_result        = 11; // int32_phone_bind_result
        string phone_bind_msg_title    = 12; // str_phone_bind_msg_title
        string phone_bind_msg_content  = 13; // str_phone_bind_msg_content
      }
    }
    // RspConnectLogin is the message type for the ThirdPartLogin$RspConnectLogin.
    message RspConnectLogin {}
    // RspBindPhoneLogin is the message type for the ThirdPartLogin$RspBindPhoneLogin.
    message RspBindPhoneLogin {}
    // RspLftInfo is the message type for the ThirdPartLogin$RspLftInfo.
    message RspLftInfo {
      uint32 lft_forbid_area   = 10; // uint32_lft_forbid_area
      uint32 lft_forbid_reason = 11; // uint32_lft_forbid_reason
    }
    // RspTipsInfo is the message type for the ThirdPartLogin$RspTipsInfo.
    message RspTipsInfo {
      uint32 scene_id                   = 1; // uint32_scene_id
      string review_protect_url         = 2; // str_review_protect_url
      uint32 guid_to_main_login_flag    = 3; // uint32_guid_to_main_login_flag
      string guid_to_main_login_wording = 4; // str_guid_to_main_login_wording
    }
    // RspCmd9 is the message type for the ThirdPartLogin$RspCmd9.
    message RspCmd9 {
      RspPhoneSmsExtendLogin msg_rsp_phone_sms_extend_login = 10; // msg_rsp_phone_sms_extend_login
    }
    // RspCmd17 is the message type for the ThirdPartLogin$RspCmd17.
    message RspCmd17 {}
    // RspCmd18 is the message type for the ThirdPartLogin$RspCmd18.
    message RspCmd18 {
      RspPhoneSmsExtendLogin msg_rsp_phone_sms_extend_login = 10; // msg_rsp_phone_sms_extend_login
    }
    // RspCmd23 is the message type for the ThirdPartLogin$RspCmd23.
    message RspCmd23 {
      RspTimWeChat msg_rsp_time_wechat = 10; // msg_rsp_time_wechat
      // RspTimWeChat is the message type for the ThirdPartLogin$RspTimWeChat.
      message RspTimWeChat {
        string wechat_register_token = 10; // str_wechat_register_token
      }
    }
  }
  // Message generated by proto-message-gen. DO NOT EDIT.
  // source: oicq.wlogin_sdk.p1290pb.ThirdPartLogin$RspBodyThirdLogin
  //
  // RspBodyThirdLogin is the message type for the ThirdPartLogin$RspBodyThirdLogin.
  message RspBodyThirdLogin {
    uint32 service_type              = 10; // uint32_service_type
    uint64 qq_uin                    = 11; // uint64_qq_uin
    uint32 register_flag             = 12; // uint32_register_flag
    RspBodyGoogle msg_rsp_google     = 20; // msg_rsp_google
    RspBodyFaceBook msg_rsp_facebook = 21; // msg_rsp_facebook
    RspPhoneLogin msg_rsp_phone      = 22; // msg_rsp_phone
    RspBodyApple msg_rsp_apple       = 23; // msg_rsp_apple
    // RspBodyGoogle is the message type for the ThirdPartLogin$RspBodyGoogle.
    message RspBodyGoogle {
      string user_profile = 11; // str_user_profile
    }
    // RspBodyFaceBook is the message type for the ThirdPartLogin$RspBodyFaceBook.
    message RspBodyFaceBook {
      string user_profile = 11; // str_user_profile
    }
    // RspPhoneLogin is the message type for the ThirdPartLogin$RspPhoneLogin.
    message RspPhoneLogin {
      string user_profile = 11; // str_user_profile
    }
    // RspBodyApple is the message type for the ThirdPartLogin$RspBodyApple.
    message RspBodyApple {}
  }
  // Message generated by proto-message-gen. DO NOT EDIT.
  // source: oicq.wlogin_sdk.p1290pb.ThirdPartLogin$RspCommonInfo
  //
  // RspCommonInfo is the message type for the ThirdPartLogin$RspCommonInfo.
  message RspCommonInfo {
    uint32 need_verify_scenes = 10; // uint32_need_verify_scenes
    RspNT msg_rsp_nt          = 11; // msg_rsp_nt
    uint32 a1_seq             = 12; // uint32_a1_seq
    // RspNT is the message type for the ThirdPartLogin$RspNT.
    message RspNT {
      string uid = 1; // str_uid
      bytes ua2  = 2; // bytes_ua2
    }
  }
  // Message generated by proto-message-gen. DO NOT EDIT.
  // source: oicq.wlogin_sdk.p1290pb.ThirdPartLogin$RspPhoneSmsExtendLogin
  //
  // RspPhoneSmsExtendLogin is the message type for the ThirdPartLogin$RspPhoneSmsExtendLogin.
  message RspPhoneSmsExtendLogin {
    repeated UinInfo bind_uin_info = 10; // rpt_bind_uin_info
    int32 phone_bind_result        = 11; // int32_phone_bind_result
    string phone_bind_msg_title    = 12; // str_phone_bind_msg_title
    string phone_bind_msg_content  = 13; // str_phone_bind_msg_content
    string unbind_wording          = 14; // str_unbind_wording
  }
  // Message generated by proto-message-gen. DO NOT EDIT.
  // source: oicq.wlogin_sdk.p1290pb.ThirdPartLogin$SelfPhoneToken
  //
  // SelfPhoneToken is the message type for the ThirdPartLogin$SelfPhoneToken.
  message SelfPhoneToken {
    string token     = 10; // str_token
    int32 channel_id = 11; // int32_channel_id
  }
  // Message generated by proto-message-gen. DO NOT EDIT.
  // source: oicq.wlogin_sdk.p1290pb.ThirdPartLogin$SelfPhoneUrl
  //
  // SelfPhoneUrl is the message type for the ThirdPartLogin$SelfPhoneUrl.
  message SelfPhoneUrl {
    string upload_url = 10; // str_upload_url
    int32 channel_id  = 11; // int32_channel_id
  }
  // Message generated by proto-message-gen. DO NOT EDIT.
  // source: oicq.wlogin_sdk.p1290pb.ThirdPartLogin$UinInfo
  //
  // UinInfo is the message type for the ThirdPartLogin$UinInfo.
  message UinInfo {
    string mask_uin   = 1; // str_mask_uin
    string nick       = 2; // str_nick
    string image_url  = 3; // str_image_url
    bytes encrypt_uin = 4; // bytes_encrypt_uin
  }
}
